Fixed <p> collapse when user deletes all. in a clause

--- a/default/modules/crada/crada.css
+++ b/default/modules/crada/crada.css
@@ -275,6 +275,7 @@ div.clause-paragraph {
 p.clause {
 	margin:0px;
 	padding: 0px 15px;
+  min-height: 20px;
 }
 p.clause-locked {
 	margin:0px;
